<resources>
    <string name="app_name">News</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="back_to">Back to</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_account">Create Account?</string>
    <string name="remember">Remember</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="search_news_categories_etc">Search News, Categories, etc.</string>
    <string name="view_more">View More</string>
    <string name="title">JPMorgan Stock Rises After Posting Record Quarterly Revenue - Barron\'s</string>
    <string name="learn_more"><![CDATA[Learn More —>]]></string>
    <string name="news_of_the_day">News of the day</string>
    <string name="breaking_news">Breaking News</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="image">Image</string>
    <string name="by">By</string>
    <string name="at">At</string>
    <string name="back_button">Back Button</string>
    <string name="click_here_to_n_read_full_article">Click Here to \n Read Full Article</string>
</resources>