<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".loginSignup.SignUp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#590A0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:fontFamily="@font/playfair"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:textColor="@color/icon_color"
                android:text="@string/create_your_new_account"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:hint="@string/username"
                app:helperText=""
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/transparent"
                android:textColorHint="@color/white"
                android:background="@color/transparent"
                app:startIconDrawable="@drawable/name"
                app:startIconTint="@color/icon_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/input_txt"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:helperText=""
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/transparent"
                android:textColorHint="@color/white"
                android:background="@color/transparent"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/icon_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/input_txt"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:helperText=""
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/transparent"
                android:textColorHint="@color/white"
                android:background="@color/transparent"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/icon_color"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/icon_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/input_txt"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/con_pass_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                app:helperText=""
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/transparent"
                android:textColorHint="@color/white"
                android:background="@color/transparent"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/icon_color"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/icon_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/con_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/input_txt"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:fontFamily="@font/playfair"
                app:cornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/white"
                android:backgroundTint="@color/light_green"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/back_to"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/sign_in_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/dark_green"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>